# circular-dev-dep

./: Cargo.toml  README.md
dep-inner/: Cargo.toml
dep-outer/: Cargo.toml
