[package]
name = "dep-inner"
version = "0.1.0"
edition = "2021"
description = "Example of an inner crate in a circular dev dep system"
license = "MIT"

[dev-dependencies]
# if you use a workspace dep, `cargo publish`
# will fail because it hasn't been published
# dep-outer = { workspace = true }

# but `cargo publish` is fine if
# it's a path dep here
dep-outer = { path = "../dep-outer" }
